<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black">
                <!--android:background="@drawable/rounded_edittext">-->
            </EditText>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black">
                <!--android:background="@drawable/rounded_edittext">-->
            </EditText>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black">
                <!--android:background="@drawable/rounded_edittext">-->
            </EditText>

            <EditText
                android:id="@+id/major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/major"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black">
                <!--android:background="@drawable/rounded_edittext">-->
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:imeActionId="@+id/login"
                android:imeOptions="actionSend"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black">
            </EditText>

        <!-- Register Button -->
        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <!-- Forgot Password Button -->
        <Button
            android:id="@+id/btn_reset_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textColor="@android:color/black"/>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@null"
            android:text="@string/common_signin_button_text"
            android:textColor="@android:color/black" />

</LinearLayout>
